# binderd

./: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/binderd/: binder_api.h  buffer.cpp  buffer.h  cli.cpp  cli.h  client.cpp  client.h  client_impl.cpp  client_impl.h  constants.h  daemon.cpp  daemon.h  local_object.cpp  local_object.h  logger.cpp  logger.h  macros.h  message.cpp  message.h  message_parser.cpp  message_parser.h  messenger.h  object.h  object_pool.cpp  object_pool.h  object_translator.cpp  object_translator.h  parcel_transaction_data_reader.cpp  parcel_transaction_data_reader.h  parcel_transaction_data_writer.cpp  parcel_transaction_data_writer.h  registry.cpp  registry.h  remote_object.cpp  remote_object.h  server.cpp  server.h  server_impl.cpp  server_impl.h  server_session.cpp  (+19 more)
src/binderd/cmds/: client.cpp  client.h  monitor.cpp  monitor.h  server.cpp  server.h  service.cpp  service.h  service_manager.cpp  service_manager.h
src/binderd/common/: binary_reader.cpp  binary_reader.h  binary_writer.cpp  binary_writer.h  do_not_copy_or_move.h  fd.cpp  fd.h  fd_sets.h  optional.h  ref_counted.cpp  ref_counted.h  utils.cpp  utils.h  variable_length_array.h
tests/: CMakeLists.txt
tests/acceptance/: CMakeLists.txt  performance_tests.cpp
tests/common/: benchmark.cpp  benchmark.h  standalone_server.cpp  standalone_server.h  statistics.cpp  statistics.h
tests/integration/: CMakeLists.txt  binder_driver_interface_tests.cpp  binder_lib_tests.cpp  parcel_tests.cpp  server_client_tests.cpp  service_manager_tests.cpp
tests/unit/: CMakeLists.txt  client_tests.cpp  message_tests.cpp  object_pool_tests.cpp  object_translator_tests.cpp  parcel_transaction_data_writer_tests.cpp  ref_counted_tests.cpp  server_session_tests.cpp  server_session_tests_old.cpp
tools/: CMakeLists.txt  binder_lib_test.cpp  demo_service.cpp  throughput_test.cpp
